
* implemented reduction rule "succeeding sending event" (parameter:
  `--succeedingSendingEvent'): once a sending event has led from the current
  knowledge to a valid successor knowledge, we do not consider any other
  sending event leaving the current knowledge

* fixed `--bug' parameter which caused segmentation faults on some machines

Version 1.7
===========

* added test case for bug #13903 (`https://gna.org/bugs/?13903')

* fixed bug #14025 (`https://gna.org/bugs/?14025'): the Dot output had
  problems with nonempty knowledge with true annotation

* fixed bug #14067 (`https://gna.org/bugs/?14067'): a change in the Petri
  Net API broke the evaluation of final conditions

* added new version of the Petri Net API (after fixing bug #13844
  (`http://gna.org/bugs/?13844')

* made some adjustments which allow for a native Windows compilation
  (independent of `cygwin1.dll')

* added details to the man page; a PDF version of the man page can be
  created with `make man-pdf' in the `man' directory (requires groff and
  ps2pdf)

* small fix to allow compilation under x86_64 architectures

Version 1.6
===========

* fixed bug #13994 (`https://gna.org/bugs/?13994') - malicious root node
  (i.e., a root not with reachable deadlocks or message bound violation) was
  not detected

* added more test cases for synchronous communication

* added a utility to minimize operating guidelines (see `utils/minimize') -
  this is currently an adjusted branch of Rachel which needs some polishing
  towards the new file formats

* added `--bug' option to create debug output

* using generic functions to display verbose status messages

* added status messages for nets with large inner state space

Version 1.5
===========

* fixed bug #13718 (`https://gna.org/bugs/?13651') - fixed bit annotations

* fixed bug #13903 (`https://gna.org/bugs/?13903') - filename of the
  temporary files can be passed to Wendy using the `--tmpfile' parameter
