@@ -22,6 +22,10 @@ Version 1.8-unreleased
 
 * fixed `--bug' parameter which caused segmentation faults on some machines
 
+* imported fixed Petri Net API: bug #14116 (`https://gna.org/bugs/?14116')
+  yielded incorrect results, because Wendy did not recognize unnormal input
+  files
+
 Version 1.7
 ===========
 
